apps/helm/rustfs/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
      sectionName: internal
  hostnames:
    - "rustfs.kvlk.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rustfs-svc
          port: 9001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Referrer-Policy
                value: "no-referrer, strict-origin-when-cross-origin"
              - name: Strict-Transport-Security
                value: "max-age=63072000; includeSubDomains"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: X-Frame-Options
                value: "SAMEORIGIN"
              - name: X-XSS-Protection
                value: "1; mode=block"
              - name: Permissions-Policy
                value: "geolocation=(),midi=(),sync-xhr=(),microphone=(),camera=(),magnetometer=(),gyroscope=(),fullscreen=(self),payment=()"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-public
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: rustfs
  hostnames:
    - "rustfs.kvlk.hu"
  rules:
    - backendRefs:
        - name: rustfs-svc
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /public
        - path:
            type: Exact
            value: /favicon.ico
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Referrer-Policy
                value: "no-referrer, strict-origin-when-cross-origin"
              - name: Strict-Transport-Security
                value: "max-age=63072000; includeSubDomains"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: X-Frame-Options
                value: "SAMEORIGIN"
              - name: X-XSS-Protection
                value: "1; mode=block"
              - name: Permissions-Policy
                value: "geolocation=(),midi=(),sync-xhr=(),microphone=(),camera=(),magnetometer=(),gyroscope=(),fullscreen=(self),payment=()"
