apps/helm/rustfs/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rustfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rustfs
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg-internal
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "9001"
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "9001"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/public/.*"
              - method: "GET"
                path: "/favicon.ico"
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9001"
