apps/helm/rustfs/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rustfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rustfs
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg-internal
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "9001"
